<resources>
    <string name="app_name">Color Picker</string>
    <string name="saved_colors">Saved Colors</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="random">Random</string>
    <string name="clear_all">Clear All</string>
    <string name="rgb_picker">RGB Picker</string>
    <string name="hsv_picker">HSV Picker</string>
    <string name="hex_picker">Hex Picker</string>
    <string name="copied">Copied to Clipboard</string>
    <string name="enter_valid">Enter Valid Number</string>
    <string name="not_valid">Not Valid!</string>

    <string name="delete_all">Delete All</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="all_colors_deleted">All Colors Deleted</string>
    <string name="deleted">Deleted</string>

    <string name="red_initial_val" translatable="false">R: 0</string>
    <string name="green_initial_val" translatable="false">G: 0</string>
    <string name="blue_initial_val" translatable="false">B: 0</string>
    <string name="hex_value" translatable="false">Hex: #000000</string>
    <string name="hur_initial_val" translatable="false">H: 0°</string>
    <string name="sat_initial_val" translatable="false">S: 0%</string>
    <string name="val_initial_val" translatable="false">V: 0%</string>

    <string name="saved">Saved</string>
    <string name="enter_valid_url">Enter Valid URL</string>
    <string name="no_colors_found">No Colors Found</string>
    <string name="colors_found">Colors Found</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading">Loading…</string>
    <string name="finished_loading">Finished Loading</string>
    <string name="error_saving">Error Saving</string>
    <string name="enable_permissions">Please Enable Permissions</string>
    <string name="image_checker">Image Checker</string>
    <string name="source_code_check">Source Code Check</string>
    <string name="page_view">Page View</string>
    <string name="rotate">Rotate</string>
    <string name="reload">Reload</string>

    <string name="overview_text">
        Color Picker:\n
        Primary colors are any of a group of colors from
        which all other colors can be obtained by mixing.
        In real world applications the most common colors
        chosen are red, blue, and yellow. When it come to
        representing colors digitally, the RGB24 (red, green,
        blue) model is most popular.
        This App lets you play around with different model and lets
        you generate your own colors.
    </string>
    <string name="howToUse_text">
        How to Use:\n
        RGB and HSV:\n
        Move the slider to select a value from 0-255
        (0-360 for hue, 0-100 for saturation and value).
        Do this for each slider to get your desired color.\n
        Hex:\n
        Tap on the digit you wish to edit in the hex view
        and then enter your desired value from the keyboard.\n
        When a desired color is found you can copy the
        hexadecimal value to your clipboard via the \"Save\"
        option. This will also save the
        color in your \"Saved Colors\" menu.\n
        Saved Colors:\n
        To resave the hexadecimal value to your clipboard,
        tap the desired color from your list of colors. If you
        wish to delete a color from your Saved Colors menu,
        press and hold.\n
        Image Checker:\n
        1. Enter your desired URL. Press the search button to confirm.
        When the list of colors is returned, simple tap
        on any color to save it in your app.\n
        2. If the color you are looking for is not here, select the
        Page Viewer option for the options menu. Wait for the page
        to fully load. Once the page has fully loaded, you can scroll
        down through its content. To save a color you must first
        lock the the view, then simply
        tap anywhere on the web page to choose your color.
        If you are happy with the color, tap on the save icon
        in the top right corner to save it.\n
        3. To view all your saved colors, select the Saved Colors,
        option from the home screen. To save the hexadecimal value
        to your clipboard, tap on the desired color. If you wish
        to delete a color from your Saved Colors menu, press and hold.\n\n
        (Note: Please make sure you have a stable
        internet connection. If an Invalid URL message is
        displayed, please make sure you have entered the correct
        protocol, domain and resource.)
    </string>
    <string name="rgb_about_text">
        (RGB)\n
        This scheme restricts the
        number of available values to 8 bits in three color
        channels with values of 0–255. This means that any
        given color can be one of 16,777,216 possible colors.
    </string>
    <string name="hsv_about_text">
        (HSV)\n
        Hue, Saturation, Value is an alternative representations
        of the RGB color model. It more closely aligns with the
        way human vision perceives color-making attributes.
        The HSV representation models the way paints of different
        colors mix together, with the saturation dimension resembling
        various shades of brightly colored paint, and the value
        dimension resembling the mixture of those paints with
        varying amounts of black or white paint.
    </string>
    <string name="cymk_about_text">
        (CMYK)\n
        Cyan, Magenta, Yellow, Black is a subtractive color model,
        used in color printing. The CMYK model works by partially or
        entirely masking colors on a lighter, usually white, background.
        The ink reduces the light that would otherwise be reflected.
    </string>
    <string name="hex_about_text">
        (Hex)\n
        A hex triplet is a six-digit, three-byte hexadecimal number used
        to represent colors in computing applications. The bytes
        represent the red, green and blue components of the color.
        One byte represents a number in the range 00 to FF (in hexadecimal
        notation), or 0 to 255 in decimal notation.
    </string>
    <string name="hsv" translatable="false">HSV</string>
    <string name="hex" translatable="false">Hex</string>
    <string name="rgb" translatable="false">RGB</string>
    <string name="hash_symbol" translatable="false">#</string>
    <string name="h_letter" translatable="false">H</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="s_letter" translatable="false">S</string>
    <string name="v_letter" translatable="false">V</string>
    <string name="rgb_zeroed" translatable="false">rgb(0,0,0)</string>
    <string name="hsv_zeroed" translatable="false">hsv(0°,0%,0%)</string>
    <string name="www_dot" translatable="false">www.</string>
    <string name="rgb_zeroed_v2" translatable="false">RGB (0, 0, 0)</string>
    <string name="hsv_zeroed_v2" translatable="false">HSV (0°, 0%, 0%)</string>

</resources>
