<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB212121">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/overview_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/howToUse_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/rgb_about_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/hsv_about_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/cymk_about_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.4"
            android:gravity="start"
            android:text="@string/hex_about_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>