<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.mulkearn.kevin.colorpicker.RGBActivity">

    <LinearLayout
        android:id="@+id/navButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/rgb"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FFFFFF"
            android:background="#BB212121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/hsv"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FFFFFF"
            android:background="#FF212121"
            android:onClick="hsvNavClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/hex"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FFFFFF"
            android:background="#FF212121"
            android:onClick="hexNavClick"/>

    </LinearLayout>


    <TextView
        android:id="@+id/hexValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/navButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#BB212121"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hex_value"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/hueValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/satValue"
        android:background="#BB212121"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hur_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/satValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_centerHorizontal="true"
        android:background="#BB212121"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sat_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/valValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/satValue"
        android:background="#BB212121"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/val_initial_val"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/redValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/greenValue"
        android:background="#FF0000"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/red_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/greenValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#00FF00"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/green_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/blueValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/greenValue"
        android:background="#0000FF"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/blue_initial_val"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/red_stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/green_stuff"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus_sign"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:onClick="redMinus"/>
        <SeekBar
            android:id="@+id/redSeeker"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:max="255"
            android:progressDrawable="@drawable/custom_val_seekbar"
            android:thumb="@drawable/custom_thumb"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus_sign"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:onClick="redPlus"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/green_stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blue_stuff"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus_sign"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:onClick="greenMinus"/>
        <SeekBar
            android:id="@+id/greenSeeker"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:max="255"
            android:progressDrawable="@drawable/custom_val_seekbar"
            android:thumb="@drawable/custom_thumb"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus_sign"
            android:background="#00FF00"
            android:textColor="#FFFFFF"
            android:onClick="greenPlus"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blue_stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus_sign"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:onClick="blueMinus"/>
        <SeekBar
            android:id="@+id/blueSeeker"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:max="255"
            android:progressDrawable="@drawable/custom_val_seekbar"
            android:thumb="@drawable/custom_thumb" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus_sign"
            android:background="#0000FF"
            android:textColor="#FFFFFF"
            android:onClick="bluePlus"/>

    </LinearLayout>

</RelativeLayout>
