<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.mulkearn.kevin.colorpicker.MainActivity">


    <SeekBar
        android:id="@+id/redSeeker"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/greenSeeker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#000000"
        android:thumbTint="#FF0000" />

    <SeekBar
        android:id="@+id/greenSeeker"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/blueSeeker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#000000"
        android:thumbTint="#00FF00" />

    <SeekBar
        android:id="@+id/blueSeeker"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="255"
        android:progressBackgroundTint="#FFFFFF"
        android:progressTint="#000000"
        android:thumbTint="#0000FF" />


    <TextView
        android:id="@+id/redValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/redSeeker"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/greenValue"
        android:background="#FF0000"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/red_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/greenValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/redSeeker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#00FF00"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/green_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/blueValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/redSeeker"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/greenValue"
        android:background="#0000FF"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/blue_initial_val"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/hexValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/satValue"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hex_value"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/hueValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/redValue"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/satValue"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hur_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/satValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/greenValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sat_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/valValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/blueValue"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/satValue"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/val_initial_val"
        android:textColor="#FFFFFF" />
</RelativeLayout>
