<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hsvLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/hexValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hex_value"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/hueValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/satValue"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/hur_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/satValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sat_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/valValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/hexValue"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/satValue"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/val_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/redValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/greenValue"
        android:background="#FF0000"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/red_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/greenValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#00FF00"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/green_initial_val"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/blueValue"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/satValue"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/greenValue"
        android:background="#0000FF"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/blue_initial_val"
        android:textColor="#FFFFFF" />

    <SeekBar
        android:id="@+id/hueSeeker"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/satSeeker"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/hue_h"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp"
        android:max="360"
        android:thumb="@drawable/custom_val_thumb"
        android:progressDrawable="@drawable/custom_val_seekbar"/>

    <SeekBar
        android:id="@+id/satSeeker"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/valSeeker"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/sat_s"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp"
        android:max="100"
        android:thumb="@drawable/custom_val_thumb"
        android:progressDrawable="@drawable/custom_val_seekbar"/>

    <SeekBar
        android:id="@+id/valSeeker"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/val_v"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp"
        android:max="100"
        android:thumb="@drawable/custom_val_thumb"
        android:progressDrawable="@drawable/custom_val_seekbar" />

    <TextView
        android:id="@+id/hue_h"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/sat_s"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|end"
        android:text="H"
        android:background="#FF0000"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/sat_s"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/val_v"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|end"
        android:text="S"
        android:background="#000000"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/val_v"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|end"
        android:text="V"
        android:background="#000000"
        android:textColor="#FFFFFF"/>

</RelativeLayout>