<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8E8">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/infoPanel"/>

    <LinearLayout
        android:id="@+id/infoPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/colorDisplay"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/hexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_value"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/rgbText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rgb_zeroed"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/hsvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hsv_zeroed"
                android:textSize="15sp"
                android:textColor="#000000"/>

        </LinearLayout>

        <Button
            android:id="@+id/captureButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/camera_capture_button"
            android:onClick="onCaptureClick"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/menu_gallery_button"
            android:onClick="onOpenClick" />

    </LinearLayout>

</RelativeLayout>